# OpenBB

openbb_platform/providers/: README.md
openbb_platform/providers/upstox/: README.md  __init__.py  pyproject.toml
openbb_platform/providers/upstox/openbb_upstox/: __init__.py
openbb_platform/providers/upstox/openbb_upstox/models/: equity_historical.py  equity_quote.py  market_holidays.py  market_status.py  options_chain.py
openbb_platform/providers/upstox/openbb_upstox/utils/: __init__.py
openbb_platform/providers/upstox/tests/: test_upstox_fetchers.py
