[tool.poetry]
name = "openbb-upstox"
version = "0.1.0"
description = "Upstox Provider Extension for the OpenBB Platform"
authors = ["OpenBB <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_upstox" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
openbb-core = "^1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
upstox = "openbb_upstox:upstox_provider"
